# potential-spoon

./: .drone.yml  Cargo.toml  Dockerfile  README.md
src/: html.rs  html_zipcode_handler.rs  index_handler.rs  json_zipcode_handler.rs  main.rs  zipcode_api.rs  zipcode_handler.rs
static/: jsonview.bundle.css
template/: index.html  zipcode.html
test/: zipcode_want.html
