[package]
name = "potential-spoon"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
actix-web = "3.3.2"
env_logger = "0.9.0"
log = "0.4.14"
reqwest = {version="0.11.4", features=["blocking", "json"]}
serde = {version="1.0.129", features=["derive"]}
serde_json = "1.0.66"
tera = "1.12.1"
